--- a/Baladas/baladas/src/main/AndroidManifest.xml
+++ b/Baladas/baladas/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+
         <activity
             android:name="br.uniararas.baladas.MainActivity"
             android:label="@string/app_name" >
@@ -18,7 +19,7 @@
         </activity>
         <activity
             android:name="br.uniararas.baladas.login"
-            android:label="@string/title_activity_login" >
+            android:label="Login" >
         </activity>
         <activity
             android:name="br.uniararas.baladas.pesquisa"
