--- a/Baladas/baladas/src/main/AndroidManifest.xml
+++ b/Baladas/baladas/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme" >
         <activity
             android:name="br.uniararas.baladas.MainActivity"
             android:label="@string/app_name" >
@@ -28,6 +27,10 @@
         <activity
             android:name="br.uniararas.baladas.balada"
             android:label="@string/title_activity_balada" >
+        </activity>
+        <activity
+            android:name="br.uniararas.baladas.cadastroBalada"
+            android:label="@string/title_activity_cadastro_balada" >
         </activity>
     </application>
 
